--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ion-app>
+<ion-app class="app">
   <ion-menu contentId="main-content" color="secondary">
     <ion-header>
       <ion-toolbar color="secondary">
