--- a/src/app/director/director.page.html
+++ b/src/app/director/director.page.html
@@ -60,11 +60,11 @@
             </tbody>
           </table>
           <div class="button-container">
-            <ion-button size="small" [routerLink]="['edit', director.id]">
+            <ion-button size="small" color="success" [routerLink]="['edit', director.id]">
               <ion-icon name="create" slot="start"></ion-icon>
               Editar
             </ion-button>
-            <ion-button size="small" (click)="remove(director)">
+            <ion-button size="small" color="danger" (click)="remove(director)">
               <ion-icon name="trash" slot="end"></ion-icon>
               Excluir
             </ion-button>
