--- a/src/app/actor/actor.page.html
+++ b/src/app/actor/actor.page.html
@@ -3,14 +3,14 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Teatro</ion-title>
+    <ion-title>Atores</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Teatro</ion-title>
+      <ion-title size="large">Atores</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -60,11 +60,11 @@
             </table>
 
             <div class="button-container">
-              <ion-button size="small" [routerLink]="['edit', actor.id]">
+              <ion-button size="small" color="success" [routerLink]="['edit', actor.id]">
                 <ion-icon name="create" slot="start"></ion-icon>
                 Editar
               </ion-button>
-              <ion-button size="small" (click)="remove(actor)">
+              <ion-button size="small" color="danger" (click)="remove(actor)">
                 <ion-icon name="trash" slot="end"></ion-icon>
                 Excluir
               </ion-button>
