--- a/src/app/theater/theater.page.html
+++ b/src/app/theater/theater.page.html
@@ -12,29 +12,44 @@
       <ion-title size="large">Teatros</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-item>
-    <ion-label>Ordenar por fundação</ion-label>
-    <ion-select [(ngModel)]="selectedOrder" (ionChange)="loadTheaters()">
-      <ion-select-option value="asc">Mais antigo</ion-select-option>
-      <ion-select-option value="desc">Mais recente</ion-select-option>
-    </ion-select>
-  </ion-item>
-  <div class="ion-padding">
-    <ion-button (click)="previousPage()" [disabled]="currentPage === 1">Anterior</ion-button>
-    <ion-label>Página {{ currentPage }}</ion-label>
-    <ion-button (click)="nextPage()">Próxima</ion-button>
-  </div>
-  <ion-item>
-    <ion-label>Teatros por página</ion-label>
-    <ion-select [(ngModel)]="limit" (ionChange)="loadTheaters()">
-      <ion-select-option [value]="1">1</ion-select-option>
-      <ion-select-option [value]="2">2</ion-select-option>
-      <ion-select-option [value]="3">3</ion-select-option>
-      <ion-select-option [value]="5">5</ion-select-option>
-      <ion-select-option [value]="10">10</ion-select-option>
-    </ion-select>
-  </ion-item>
   <ion-list>
+    <div class="selects-row">
+      <ion-item lines="full" class="select-item">
+        <ion-label>Ordenar por Nome</ion-label>
+        <ion-select [(ngModel)]="selectedOrder" (ionChange)="loadTheaters()" interface="popover">
+          <ion-select-option value="asc">Crescente</ion-select-option>
+          <ion-select-option value="desc">Decrescente</ion-select-option>
+        </ion-select>
+      </ion-item>
+
+      <ion-item lines="full" class="select-item">
+        <ion-label>Teatros por página</ion-label>
+        <ion-select [(ngModel)]="limit" (ionChange)="loadTheaters()" interface="popover">
+          <ion-select-option [value]="1">1</ion-select-option>
+          <ion-select-option [value]="2">2</ion-select-option>
+          <ion-select-option [value]="3">3</ion-select-option>
+          <ion-select-option [value]="5">5</ion-select-option>
+          <ion-select-option [value]="10">10</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </div>
+
+    <div class="pagination-container ion-padding">
+      <ion-button size="small" (click)="previousPage()" [disabled]="currentPage === 1" fill="outline" color="medium">
+        Anterior
+      </ion-button>
+
+      <ion-label class="page-label" aria-live="polite">
+        Página <strong>{{ currentPage }}</strong>
+      </ion-label>
+
+      <ion-button size="small" (click)="nextPage()" fill="outline" color="medium">
+        Próxima
+      </ion-button>
+    </div>
+
+
+
     <ion-list-header>
       <ion-label class="titulo">Lista de Teatros</ion-label>
     </ion-list-header>
@@ -50,7 +65,7 @@
               src="https://imgs.search.brave.com/vvPQQBvMiB8sI69j6zQ6Eow2teMG6HAKXXkMysEptCI/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9zZWEy/LmRpc2NvdXJzZS1j/ZG4uY29tL2ZsZXgw/MjAvdXNlcl9hdmF0/YXIvY29tbXVuaXR5/LmdsaWRlYXBwcy5j/b20vbmF0aGFuYWVs/Yi80OC80MzA3OV8y/LnBuZw" />
             }
           </ion-thumbnail>
-          <div class="nome-idade">
+          <div class="nome-phone">
             <h2>{{ theater.name }}</h2>
             <h3>{{ theater.phone }}</h3>
           </div>
@@ -81,11 +96,11 @@
             </tbody>
           </table>
           <div class="button-container">
-            <ion-button size="small" [routerLink]="['edit', theater.id]">
+            <ion-button size="small" color="success" [routerLink]="['edit', theater.id]">
               <ion-icon name="create" slot="start"></ion-icon>
               Editar
             </ion-button>
-            <ion-button size="small" (click)="remove(theater)">
+            <ion-button size="small" color="danger" (click)="remove(theater)">
               <ion-icon name="trash" slot="end"></ion-icon>
               Excluir
             </ion-button>
